# rigs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
docs/: TERMINOLOGY.md  rigs-architecture.md  rigs-cost-analysis.md  rigs-issues.md
migrations/: 001_initial.sql
src/: config.rs  main.rs
src/cli/: bead.rs  convoy.rs  foreman.rs  goal.rs  init.rs  mod.rs  provider.rs  status.rs  tank.rs
src/core/: bead.rs  convoy.rs  error.rs  mod.rs  provider.rs  tank.rs
src/db/: mod.rs  repository.rs
tests/: integration_test.rs
